--- a/index.html
+++ b/index.html
@@ -62,8 +62,39 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
+            <script type="text/javascript" id="scr_62d2d0268eb617000a2a0a2b">var s=document.createElement("script");s.src="https://scripts.converteai.net/a9afc57f-dca7-4922-a189-47559a4644db/players/62d2d0268eb617000a2a0a2b/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+
+            <!--
+            1)  Acelerado - Criança alternativa
+            https://protocolozerobarriga-revelado.site/
             <script type="text/javascript" id="scr_62427aa534cf0a0009811d97">var s=document.createElement("script");s.src="https://cdn.converteai.net/fd802aef-7557-4a85-91a3-ade3d9b9c68e/players/62427aa534cf0a0009811d97/player.js",s.async=!0,document.head.appendChild(s);</script>
             
+            2) 1x - Padrão        
+            https://melhoriasparavida.com/ OK 1x - criança
+            <script type="text/javascript" id="scr_62d2d0268eb617000a2a0a2b">var s=document.createElement("script");s.src="https://scripts.converteai.net/a9afc57f-dca7-4922-a189-47559a4644db/players/62d2d0268eb617000a2a0a2b/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            5) 1x - Mulher Malhando
+            https://protocolo-zero-barriga.co/ - OK - ALTERNATIVO 1X
+            <script type="text/javascript" id="scr_62d1ce686008c2000ba713cd">var s=document.createElement("script");s.src="https://scripts.converteai.net/cb45e4d9-ab66-4b6e-a97e-e30ca79acf74/players/62d1ce686008c2000ba713cd/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            6) 1x - Mulher Malhando
+            https://protocolozerobarriga.plus/  - OK - ALTERNATIVO 1X - Igual anterior
+            <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+
+            BLOQUEADOS
+            Kayky - 
+            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            https://protocolo-zero-barriga.info/ VIMEO
+            <iframe src="https://player.vimeo.com/video/732274306?h=d91914f059" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+            https://protocolozerobarriga.vip/
+            <script type="text/javascript" id="scr_62ebdc81ed399b000a65cd39">var s=document.createElement("script");s.src="https://scripts.converteai.net/80f04d2e-6218-4556-b506-0b647b93c60f/players/62ebdc81ed399b000a65cd39/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            -->
+
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/BG4cJra" class="a-btn" style="text-decoration: none;">
