--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62d2d0268eb617000a2a0a2b">var s=document.createElement("script");s.src="https://scripts.converteai.net/a9afc57f-dca7-4922-a189-47559a4644db/players/62d2d0268eb617000a2a0a2b/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
 
 
             <!--
@@ -489,7 +489,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 2000); //1707000 temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1793000); //1707000 temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
