--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             <!-- VSL -->
             <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
 
-
+C
             <!--
             1)  Acelerado - Criança alternativa
             https://protocolozerobarriga-revelado.site/
             <script type="text/javascript" id="scr_62427aa534cf0a0009811d97">var s=document.createElement("script");s.src="https://cdn.converteai.net/fd802aef-7557-4a85-91a3-ade3d9b9c68e/players/62427aa534cf0a0009811d97/player.js",s.async=!0,document.head.appendChild(s);</script>
             
-            2) 1x - Padrão        
+            2) 1x - Padrão        BLOQUEADO
             https://melhoriasparavida.com/ OK 1x - criança
             <script type="text/javascript" id="scr_62d2d0268eb617000a2a0a2b">var s=document.createElement("script");s.src="https://scripts.converteai.net/a9afc57f-dca7-4922-a189-47559a4644db/players/62d2d0268eb617000a2a0a2b/player.js",s.async=!0,document.head.appendChild(s);</script>
 
@@ -489,7 +489,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1793000); //1707000 temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1740000); // 1740000 1793000 1707000 temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
