--- a/teste/index.html
+++ b/teste/index.html
@@ -103,7 +103,7 @@
             -->
 
             <!-- Botão PANDA VIDEO -->
-            <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-f4257dc8-5065-457c-94ba-3c990a799d12',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script><div id="e8fc4fc6-97cc-42dd-9c65-9b045909c471"></div>
+            <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p= PandaPlayer('panda-f4257dc8-5065-457c-94ba-3c990a799d12',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script><div id="e8fc4fc6-97cc-42dd-9c65-9b045909c471"></div>
 
 
             <!-- Botão 1 -->
