--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
+            <div style="position:relative;padding-top:56.25%;"><iframe id="panda-f4257dc8-5065-457c-94ba-3c990a799d12" src="https://player-vz-779fae75-c7e.tv.pandavideo.com.br/embed/?v=f4257dc8-5065-457c-94ba-3c990a799d12" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
+
+            <!-- OFICIAL  
             <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
 
-C
-            <!--
             1)  Acelerado - Criança alternativa
             https://protocolozerobarriga-revelado.site/
             <script type="text/javascript" id="scr_62427aa534cf0a0009811d97">var s=document.createElement("script");s.src="https://cdn.converteai.net/fd802aef-7557-4a85-91a3-ade3d9b9c68e/players/62427aa534cf0a0009811d97/player.js",s.async=!0,document.head.appendChild(s);</script>
@@ -100,6 +101,10 @@ C
             <script type="text/javascript" id="scr_62ebdc81ed399b000a65cd39">var s=document.createElement("script");s.src="https://scripts.converteai.net/80f04d2e-6218-4556-b506-0b647b93c60f/players/62ebdc81ed399b000a65cd39/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             -->
+
+            <!-- Botão PANDA VIDEO -->
+            
+
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
@@ -495,7 +500,7 @@ C
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1720000); // 1740000 1793000 1707000 temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1707000); // 1720000 1740000 1793000 1707000 temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
