--- a/index.html
+++ b/index.html
@@ -68,10 +68,17 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_62d1ce686008c2000ba713cd">var s=document.createElement("script");s.src="https://scripts.converteai.net/cb45e4d9-ab66-4b6e-a97e-e30ca79acf74/players/62d1ce686008c2000ba713cd/player.js",s.async=!0,document.head.appendChild(s);</script> 
 
             <!-- OFICIAL  
             <script type="text/javascript" id="scr_62e1a006e6520c000adc85b4">var s=document.createElement("script");s.src="https://scripts.converteai.net/502745d2-b9ca-4192-817d-693d34361b6e/players/62e1a006e6520c000adc85b4/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+
+            ESPANHOU - CRIANÇA
+            <div style="position:relative;padding-top:56.25%;"><iframe id="panda-570e2457-64d7-4424-85b2-049aaffa8f47" src="https://player-vz-bc711a15-377.tv.pandavideo.com.br/embed/?v=570e2457-64d7-4424-85b2-049aaffa8f47" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
+            
+            VERSÃO - MULHER MALHANDO - R$147 - OK
+            <script type="text/javascript" id="scr_62d1ce686008c2000ba713cd">var s=document.createElement("script");s.src="https://scripts.converteai.net/cb45e4d9-ab66-4b6e-a97e-e30ca79acf74/players/62d1ce686008c2000ba713cd/player.js",s.async=!0,document.head.appendChild(s);</script> 
 
             1)  Acelerado - Criança alternativa
             https://protocolozerobarriga-revelado.site/
@@ -81,7 +88,7 @@
             https://melhoriasparavida.com/ OK 1x - criança
             <script type="text/javascript" id="scr_62d2d0268eb617000a2a0a2b">var s=document.createElement("script");s.src="https://scripts.converteai.net/a9afc57f-dca7-4922-a189-47559a4644db/players/62d2d0268eb617000a2a0a2b/player.js",s.async=!0,document.head.appendChild(s);</script>
 
-            5) 1x - Mulher Malhando
+            5) 1x - Mulher Malhando - $97
             https://protocolo-zero-barriga.co/ - OK - ALTERNATIVO 1X
             <script type="text/javascript" id="scr_62d1ce686008c2000ba713cd">var s=document.createElement("script");s.src="https://scripts.converteai.net/cb45e4d9-ab66-4b6e-a97e-e30ca79acf74/players/62d1ce686008c2000ba713cd/player.js",s.async=!0,document.head.appendChild(s);</script>
 
