--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
 
             -->
 
-            <!-- Botão 1 -->
+            <!-- Botão 1
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/BG4cJra" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
+            -->
           </div>
         </div>
       </div>
@@ -496,13 +497,14 @@
                 </div>
               </div>
             </div>
-            <!-- Botão 2 -->
+            <!-- Botão 2
             <div id="cta2" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/BG4cJra" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
+             -->
           </div>
         </div>
       </div>
