--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- End Meta Pixel Code -->
 
     <!-- Acelerador de código do VTurb -->
-    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e4c90fd42a20009f7483d/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630e5bfb3ca310000a7a1f74/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e4c90fd42a20009f7483d/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630e4b87fd42a20009f7483c/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e5bfb3ca310000a7a1f74/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630e4b87fd42a20009f7483c/playlist.m3u8" as="fetch"><link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630e4e6e3df13e0009c971b9/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -81,7 +81,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <div id="vid_630e4c90fd42a20009f7483d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_630e4c90fd42a20009f7483d" src="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e4c90fd42a20009f7483d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_630e4c90fd42a20009f7483d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_630e4c90fd42a20009f7483d">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e4c90fd42a20009f7483d/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_630e5bfb3ca310000a7a1f74">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630e5bfb3ca310000a7a1f74/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!--
             1) ESPANHOU - CRIANÇA
