--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>Protocolo Cero Barriga</title>
     
     <style type="text/css">
       header {
@@ -55,10 +55,10 @@
     <!-- End Meta Pixel Code -->
 
     <!-- Acelerador de código do VTurb -->
-    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630e5bfb3ca310000a7a1f74/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630e5bfb3ca310000a7a1f74/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630e4b87fd42a20009f7483c/playlist.m3u8" as="fetch"><link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630e4e6e3df13e0009c971b9/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630f91c55a28e60009199182/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -78,10 +78,10 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 ingredientes que hacen que el cuerpo se derrita hasta 13kg en 30 días</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_630e5bfb3ca310000a7a1f74">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630e5bfb3ca310000a7a1f74/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_630f9278fd42a2000a87a656" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_630f9278fd42a2000a87a656" src="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_630f9278fd42a2000a87a656" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_630f9278fd42a2000a87a656">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!--
             1) ESPANHOU - CRIANÇA
@@ -119,14 +119,13 @@
 
             -->
 
-            <!-- Botão 1
+            <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/BG4cJra" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
+              <a href="https://pay.hotmart.com/B74364983N" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">Si! Quiero Resultados en 21 Dias!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
-            -->
           </div>
         </div>
       </div>
@@ -148,16 +147,17 @@
                           src="./assets/img/comentarios/m2.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Valesca Silva</name>
+                          <name>Patricia Heredia Hermida</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Amei vou fazer hoje mesmo pois estou em processo de emagrecimento. Muito obrigada 😘</td>
+                      <td class="fb-comments-comment-text">Gracias, ya estoy siguiendo el método y me sorprendió mucho
+ 😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -177,16 +177,16 @@
                           src="./assets/img/comentarios/m3.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Vitória Pereira</name>
+                          <name>Sara Barbosa</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Ele também me ajudou perdi 22kg obrigado, e ajuda até hoje com essas receitas deliciosas</td>
+                      <td class="fb-comments-comment-text">Lo recomiendo mucho, llevo 2 semanas haciéndolo y los resultados han sido increíbles</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -206,16 +206,16 @@
                           src="./assets/img/comentarios/m4.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Mariana Martins</name>
+                          <name>Tatiana Gonzalez</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, já são 20 kilos a menos em 4 meses ,agradecida</td>
+                      <td class="fb-comments-comment-text">a mejor compra de todos los tiempos</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -235,16 +235,16 @@
                           src="./assets/img/comentarios/m5.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Juliana Castro</name>
+                          <name>Isabel Vicente</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Tomei essa vitamina durante 1 mês, acompanhada da dieta de açúcar e carboidratos, perdir 5 quilos, e me sentia bem melhor, faz um ano, agora vou voltar a tomar novamente.</td>
+                      <td class="fb-comments-comment-text">i amigo que me indicó y me encantan los resultados.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -269,11 +269,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Estou feliz, a 7 meses atrás eu estava com 78kg e hoje estou com 54kg até postei a respeito no meu perfil aqui no face o antes e depois 😘😘😘</td>
+                      <td class="fb-comments-comment-text">Me encantaron las recetas, he estado comiendo tantas cosas calientes de nuevo 😘😘😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -293,16 +293,16 @@
                           src="./assets/img/comentarios/m7.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Roberta Gomes</name>
+                          <name>Rosana Garín</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Realmente funciona, minha barriga tem diminuído a cada dia. Obrigada por compartilhar 🥰</td>
+                      <td class="fb-comments-comment-text">Vine aquí para decir que me gustó mucho y también decir que este método realmente funciona, no puedo creer cuánto estoy comiendo sin preocupaciones, a través de mí mi hermana y mi madre también comenzaron esta semana. gracias por el apoyo y servicio que nos distes 🥰</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -323,16 +323,16 @@
                       </td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Rafaela Souza</name>
+                          <name>Jaine Avilés</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Emagrece mesmo gente receita testada e aprovada</td>
+                      <td class="fb-comments-comment-text">El método Mlehor que he probado en la vida, además de las maravillosas recetas, tiene mucho contenido agradable. maravilloso</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
-                        <like>Curtir</like>
+                        <like>Me gusta</like>
                         ·
                         <reply>Responder</reply>
                         ·
@@ -355,16 +355,16 @@
                         </td>
                         <td>
                           <font class="fb-comments-comment-name">
-                            <name>Ana Sofia</name>
+                            <name>Carla Almeida</name>
                           </font>
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Maravilhosa melhor de todas fez 7dias tomando e 7 klos já conseguir eliminar tô muito feliz obrigado 😍😍😍</td>
+                        <td class="fb-comments-comment-text">lo bueno de todo lo que das para adelgazar sin tener que ir al gimnasio, muy bueno 😍😍😍</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
-                          <like>Curtir</like>
+                          <like>Me gusta</like>
                           ·
                           <reply>Responder</reply>
                           ·
@@ -385,16 +385,16 @@
                         </td>
                         <td>
                           <font class="fb-comments-comment-name">
-                            <name>Laura Flores</name>
+                            <name>María Eugenia</name>
                           </font>
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Eu já estou tomando, já eliminei 7 kls, já fez muita diferença, minhas roupas estavam todas apertadas,  ágora já estão largas, estou num pós operatório de coluna por isso engordei muito 15 Kg, estava sentindo muita dor agora amenizou muito depois que emagreci já consigo andar mais q antes 🙏🙏🙏🙏🙏🙏</td>
+                        <td class="fb-comments-comment-text">Tengo ropa que lleva años guardada en el armario, fui a probar hoy y todas se están metiendo en mi cuerpo, me encanta todo esto</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
-                          <like>Curtir</like>
+                          <like>Me gusta</like>
                           ·
                           <reply>Responder</reply>
                           ·
@@ -415,16 +415,16 @@
                         </td>
                         <td>
                           <font class="fb-comments-comment-name">
-                            <name>Daniela Costa</name>
+                            <name>Laura Del Puerto</name>
                           </font>
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Muito Obrigada tem me ajudado e muito,Adorei ...Durmo super bem e vendo resultado ..🌹🥰🙋</td>
+                        <td class="fb-comments-comment-text">Lo recomiendo mucho, estoy enamorada! 🌹🥰🙋</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
-                          <like>Curtir</like>
+                          <like>Me gusta</like>
                           ·
                           <reply>Responder</reply>
                           ·
@@ -444,16 +444,16 @@
                             src="./assets/img/comentarios/m17.jpeg"></td>
                         <td>
                           <font class="fb-comments-comment-name">
-                            <name>Juliana Dias</name>
+                            <name>Karla Dennice S</name>
                           </font>
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Em duas semanas comecei a ver resultados, muito bom</td>
+                        <td class="fb-comments-comment-text">método fácil de hacer, muy bien hecho</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
-                          <like>Curtir</like>
+                          <like>Me gusta</like>
                           ·
                           <reply>Responder</reply>
                           ·
@@ -474,16 +474,16 @@
                         </td>
                         <td>
                           <font class="fb-comments-comment-name">
-                            <name>Isabelle Correia</name>
+                            <name>Ana Celsa</name>
                           </font>
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs</td>
+                        <td class="fb-comments-comment-text">ELo que me encanta son las recetas, ni siquiera imaginé que podría comer tan bien</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
-                          <like>Curtir</like>
+                          <like>Me gusta</like>
                           ·
                           <reply>Responder</reply>
                           ·
@@ -497,14 +497,13 @@
                 </div>
               </div>
             </div>
-            <!-- Botão 2
+            <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/BG4cJra" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
+              <a href="https://pay.hotmart.com/B74364983N" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">Si! Quiero Resultados en 21 Dias!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
-             -->
           </div>
         </div>
       </div>
@@ -515,7 +514,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1720000); // 1720000 1740000 1793000 1707000 temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1320000); // 1720000 1740000 1793000 1707000 temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
