--- a/es/index.html
+++ b/es/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>Protocolo Cero Barriga</title>
     
     <style type="text/css">
       header {
@@ -55,10 +55,10 @@
     <!-- End Meta Pixel Code -->
 
     <!-- Acelerador de código do VTurb -->
-    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630ffed73df13e0009c97349/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630f91c55a28e60009199182/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630ffed73df13e0009c97349/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630f91015a28e6000919917d/playlist.m3u8" as="fetch"><link rel="preload" href="https://cdn.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/630f91c55a28e60009199182/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -78,10 +78,10 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Nuevo ritual matutino para derretir mucho en solo 21 dias</b></h3>
+            <h3 class="my-4"><b>6 ingredientes que hacen que el cuerpo se derrita hasta 13kg en 30 días</b></h3>
 
             <!-- VSL -->
-            <div id="vid_630f9278fd42a2000a87a656" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_630f9278fd42a2000a87a656" src="https://images.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_630f9278fd42a2000a87a656" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_630f9278fd42a2000a87a656">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/players/630f9278fd42a2000a87a656/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_630ffed73df13e0009c97349">var s=document.createElement("script");s.src="https://scripts.converteai.net/a44ab07f-5278-407e-9b91-6ce3148a41ad/ab-test/630ffed73df13e0009c97349/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!--
             1) ESPANHOU - CRIANÇA
@@ -119,13 +119,14 @@
 
             -->
 
-            <!-- Botão 1 -->
+            <!-- Botão 1 
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/B74364983N" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">Si! Quiero Resultados en 21 Dias!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
+            -->
           </div>
         </div>
       </div>
@@ -497,13 +498,13 @@
                 </div>
               </div>
             </div>
-            <!-- Botão 2 -->
+            <!-- Botão 2
             <div id="cta2" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/B74364983N" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">Si! Quiero Resultados en 21 Dias!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
-            </div>
+            </div>  -->
           </div>
         </div>
       </div>
