--- a/es/index.html
+++ b/es/index.html
@@ -65,6 +65,16 @@
     <link rel="dns-prefetch" href="https://api.vturb.com.br">
 
     <!-- Acelerador de código do VTurb -->
+  
+    
+		<script id="hotmart_launcher_script">
+			(function(l,a,u,n,c,h,e,r){l['HotmartLauncherObject']=c;l[c]=l[c]||function(){
+			(l[c].q=l[c].q||[]).push(arguments)},l[c].l=1*new Date();h=a.createElement(u),
+			e=a.getElementsByTagName(u)[0];h.async=1;h.src=n;e.parentNode.insertBefore(h,e)
+			})(window,document,'script','//launcher.hotmart.com/launcher.js','hot');
+
+			hot('account','3b6651db-6d7d-3f19-9e58-79dcd6a3bdd1');
+		</script>
 
     
   </head>
